Settings: Add DotOS Maintainer String
Signed-off-by: afterallafk <shivamatiet2001@gmail.com>
Signed-off-by: Pratyaksh Bharadwaj <pratyakshom.05@gmail.com>

Taken from here https://github.com/ProjectBlaze/packages_apps_Settings/commit/4e637f184506a3f18f5d7198a28ec2a8ca3545da

--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -42,6 +42,13 @@
          settings:enableCopying="true"
          settings:controller="com.android.settings.deviceinfo.firmwareversion.DotVersionPreferenceController"/>
 
+    <!-- DotOS Maintainer  -->
+    <Preference
+        android:key="dot_maintainer"
+        android:title="@string/dot_maintainer"
+        android:summary="@string/summary_placeholder"
+        settings:enableCopying="true"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.DotMaintainerPreferenceController"/>
 
     <!-- Security patch -->
     <Preference
